# Crucible

./: .coveragerc-forecast  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  RESULTS.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
benchmarks/: README.md
benchmarks/results/: bench-20260710T021301Z.json
configs/: dedup_default.yaml  forecast_financial.yaml  quality_default.yaml  synth_small.yaml
configs/experiments/: dedup_ablation.yaml  mixture_ablation.yaml  quality_ablation.yaml  scaling_law.yaml
docs/: architecture.md  changelog.md  data_contracts.md  dedup.md  features.md  forecasting.md  limitations.md  lineage.md  orchestration.md  quality.md  roadmap.md  shards.md
docs/experiments/: README.md  dedup_ablation.md  mixing_ablation.md  quality_ablation.md  scaling_law.md
results/experiments/dedup_ablation/437c528d0822/988aad638f56/: report.md  results.csv  results.json
results/experiments/dedup_ablation/adc73ba41e5f/77bfe300a204/: report.md  results.csv  results.json
results/experiments/mixture_ablation/008655194a79/7355b35958c6/: report.md  results.csv  results.json
results/experiments/mixture_ablation/eea2fcac3c38/ae32b89a0f61/: report.md  results.csv  results.json
results/experiments/quality_ablation/46c7fe66f44b/6e32ce801a86/: report.md  results.csv  results.json
results/experiments/quality_ablation/7105b682645a/b585e9b6f48e/: report.md  results.csv  results.json
results/experiments/scaling_law/bbb62eea7f3e/68a3d28153ac/: report.md  results.csv  results.json
results/experiments/scaling_law/ddf9ad49292e/3a75562b1955/: report.md  results.csv  results.json
results/forecast/19c5e9fc804f6f61/: history.json  metrics.json  model_card.json  predictions.csv  run.json
src/crucible/: __init__.py  bench.py  cli.py  config.py  dashboard.py  features.py  lineage.py  observability.py  orchestrate.py  serve.py  shards.py  smoke.py  storage.py  synth.py  versioning.py
src/crucible/assay/: __init__.py  harness.py  scoring.py  studies.py
src/crucible/dedup/: __init__.py  exact.py  minhash.py  pipeline.py
src/crucible/forecast/: __init__.py  data.py  metrics.py  model.py  pipeline.py  plots.py  trainer.py
src/crucible/ingest/: __init__.py  land.py  sources.py  stream.py
src/crucible/quality/: __init__.py  drift.py  gate.py  pandera_bridge.py  report.py  rules.py
src/crucible/train/: __init__.py  distributed.py  loop.py  model.py
src/crucible/utils/: __init__.py  hashing.py
tests/: test_assay_harness.py  test_assay_studies.py  test_bench.py  test_cli.py  test_config.py  test_dedup_minhash.py  test_dedup_pipeline.py  test_drift.py  test_features.py  test_forecast_data.py  test_forecast_metrics.py  test_forecast_train.py  test_hashing.py  test_ingest_land.py  test_ingest_sources.py  test_kafka_optional.py  test_lineage.py  test_observability.py  test_orchestrate.py  test_pandera_bridge.py  test_quality_gate.py  test_quality_rules.py  test_scoring.py  test_serve.py  test_shards.py  test_storage.py  test_stream.py  test_synth.py  test_train.py  test_versioning.py
